--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "cd7hoGhYtbXQ"
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "chRQE7oYtw62",
     "scrolled": true
@@ -278,34 +278,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r\n",
-      "Train:   0% 0/2000 [00:00<?, ? step/s]"
+      "Train:   2% 31/2000 [00:14<15:51,  2.07 step/s, accuracy=0.24, loss=6.16, step=31]"
      ]
     },
     {
-     "ename": "RuntimeError",
-     "evalue": "0D or 1D target tensor expected, multi-target not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 63\u001b[0m\n\u001b[1;32m     60\u001b[0m             pbar\u001b[38;5;241m.\u001b[39mwrite(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStep \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstep\u001b[38;5;250m \u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, best model saved. (accuracy=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_accuracy\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.4f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     61\u001b[0m     pbar\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m---> 63\u001b[0m \u001b[43mmain_multi_gpu\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mparse_args\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[4], line 39\u001b[0m, in \u001b[0;36mmain_multi_gpu\u001b[0;34m(data_dir, save_path, batch_size, n_workers, valid_steps, warmup_steps, total_steps, save_steps)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m step \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(total_steps):\n\u001b[1;32m     38\u001b[0m     batch \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mnext\u001b[39m(\u001b[38;5;28miter\u001b[39m(train_loader))\n\u001b[0;32m---> 39\u001b[0m     loss, accuracy \u001b[38;5;241m=\u001b[39m \u001b[43mmodel_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     41\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m     42\u001b[0m     loss\u001b[38;5;241m.\u001b[39mbackward()\n",
-      "Cell \u001b[0;32mIn[2], line 178\u001b[0m, in \u001b[0;36mmodel_fn\u001b[0;34m(batch, model, criterion, device)\u001b[0m\n\u001b[1;32m    174\u001b[0m labels \u001b[38;5;241m=\u001b[39m labels\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m    176\u001b[0m outs \u001b[38;5;241m=\u001b[39m model(mels)\n\u001b[0;32m--> 178\u001b[0m loss \u001b[38;5;241m=\u001b[39m \u001b[43mcriterion\u001b[49m\u001b[43m(\u001b[49m\u001b[43mouts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabels\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    180\u001b[0m \u001b[38;5;66;03m# Get the speaker id with highest probability.\u001b[39;00m\n\u001b[1;32m    181\u001b[0m preds \u001b[38;5;241m=\u001b[39m outs\u001b[38;5;241m.\u001b[39margmax(\u001b[38;5;241m1\u001b[39m)\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/nn/modules/module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1496\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1497\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1498\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1499\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1500\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1501\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1502\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/nn/modules/loss.py:1174\u001b[0m, in \u001b[0;36mCrossEntropyLoss.forward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m   1173\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor, target: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[0;32m-> 1174\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1175\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreduction\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreduction\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1176\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/nn/functional.py:3061\u001b[0m, in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[1;32m   3059\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m size_average \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m reduce \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   3060\u001b[0m     reduction \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mlegacy_get_string(size_average, reduce)\n\u001b[0;32m-> 3061\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_C\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_nn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcross_entropy_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtarget\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mweight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m_Reduction\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_enum\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreduction\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_smoothing\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: 0D or 1D target tensor expected, multi-target not supported"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stopping training: epoch is taking too long compared to single GPU (7888 > 120 sec).\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
+    "\n",
     "def parse_args():\n",
     "    \"\"\"Arguments\"\"\"\n",
     "    config = {\n",
     "        \"data_dir\": \"./Dataset\",\n",
     "        \"save_path\": \"model.ckpt\",\n",
-    "        \"batch_size\": 32,\n",
+    "        \"batch_size\": 256,\n",
     "        \"n_workers\": 0,\n",
     "        \"valid_steps\": 2000,\n",
     "        \"warmup_steps\": 1000,\n",
@@ -335,15 +334,25 @@
     "    best_state_dict = None\n",
     "\n",
     "    pbar = tqdm(total=valid_steps, ncols=0, desc=\"Train\", unit=\" step\")\n",
+    "    time_limit = 120  # 2 minute in seconds\n",
     "\n",
     "    for step in range(total_steps):\n",
     "        batch = next(iter(train_loader))\n",
     "        loss, accuracy = model_fn(batch, model, criterion, device)\n",
     "\n",
+    "        if step == 0:\n",
+    "            start_time = time.time()\n",
+    "\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        scheduler.step()\n",
+    "\n",
+    "        elapsed_time = time.time() - start_time\n",
+    "        estimated_time_left = (total_steps - step) * (elapsed_time / (step+1))\n",
+    "        if step>30 and estimated_time_left > time_limit:\n",
+    "            print(f'Stopping training: epoch is taking too long compared to single GPU ({int(estimated_time_left)} > {time_limit} sec).')\n",
+    "            return\n",
     "\n",
     "        pbar.update()\n",
     "        pbar.set_postfix(loss=f\"{loss.item():.2f}\", accuracy=f\"{accuracy.item():.2f}\", step=step + 1)\n",
@@ -378,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +416,162 @@
     "    pin_memory=True,\n",
     "    collate_fn=collate_batch,\n",
     "  )\n",
-    "  return train_loader, valid_loader, speaker_num"
+    "  return train_loader, valid_loader, speaker_num\n",
+    "\n",
+    "def model_fn(batch, model, criterion, device):\n",
+    "  \"\"\"Forward a batch through the model.\"\"\"\n",
+    "\n",
+    "  mels, labels = batch\n",
+    "  mels = mels.to(device)\n",
+    "  labels = labels.to(device)\n",
+    "\n",
+    "  outs = model(mels)\n",
+    "\n",
+    "  loss = criterion(outs, labels)\n",
+    "\n",
+    "  # Get the speaker id with highest probability.\n",
+    "  preds = outs.argmax(1)\n",
+    "  # Compute accuracy.\n",
+    "  accuracy = torch.mean((preds == labels).float())\n",
+    "\n",
+    "  return loss, accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Main single GPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train:   4% 75/2000 [01:17<33:08,  1.03s/ step, accuracy=0.01, loss=6.40, step=75]\n",
+      "Train:  20% 403/2000 [00:35<02:21, 11.25 step/s, accuracy=0.00, loss=5.98, step=403]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Info]: Use cuda now!\n",
+      "[Info]: Finish loading data!\n",
+      "[Info]: Finish creating model!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Train:   9% 174/2000 [00:09<01:34, 19.27 step/s, accuracy=0.00, loss=6.32, step=174]\n",
+      "\n",
+      "Train:  30% 606/2000 [00:32<01:18, 17.78 step/s, accuracy=0.03, loss=5.91, step=605]A\u001b[A"
+     ]
+    }
+   ],
+   "source": [
+    "def parse_args():\n",
+    "  \"\"\"arguments\"\"\"\n",
+    "  config = {\n",
+    "    \"data_dir\": \"./Dataset\",\n",
+    "    \"save_path\": \"model.ckpt\",\n",
+    "    \"batch_size\": 32,\n",
+    "    \"n_workers\": 0,\n",
+    "    \"valid_steps\": 2000,\n",
+    "    \"warmup_steps\": 1000,\n",
+    "    \"save_steps\": 4000,\n",
+    "    \"total_steps\": 70000,\n",
+    "  }\n",
+    "\n",
+    "  return config\n",
+    "\n",
+    "\n",
+    "def main(\n",
+    "  data_dir,\n",
+    "  save_path,\n",
+    "  batch_size,\n",
+    "  n_workers,\n",
+    "  valid_steps,\n",
+    "  warmup_steps,\n",
+    "  total_steps,\n",
+    "  save_steps,\n",
+    "):\n",
+    "  \"\"\"Main function.\"\"\"\n",
+    "  device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "  print(f\"[Info]: Use {device} now!\")\n",
+    "\n",
+    "  train_loader, valid_loader, speaker_num = get_dataloader(data_dir, batch_size, n_workers)\n",
+    "  train_iterator = iter(train_loader)\n",
+    "  print(f\"[Info]: Finish loading data!\",flush = True)\n",
+    "\n",
+    "  model = Classifier(n_spks=speaker_num).to(device)\n",
+    "  criterion = nn.CrossEntropyLoss()\n",
+    "  optimizer = AdamW(model.parameters(), lr=1e-3)\n",
+    "  scheduler = get_cosine_schedule_with_warmup(optimizer, warmup_steps, total_steps)\n",
+    "  print(f\"[Info]: Finish creating model!\",flush = True)\n",
+    "\n",
+    "  best_accuracy = -1.0\n",
+    "  best_state_dict = None\n",
+    "\n",
+    "  pbar = tqdm(total=valid_steps, ncols=0, desc=\"Train\", unit=\" step\")\n",
+    "\n",
+    "  for step in range(total_steps):\n",
+    "    # Get data\n",
+    "    try:\n",
+    "      batch = next(train_iterator)\n",
+    "    except StopIteration:\n",
+    "      train_iterator = iter(train_loader)\n",
+    "      batch = next(train_iterator)\n",
+    "\n",
+    "    loss, accuracy = model_fn(batch, model, criterion, device)\n",
+    "    batch_loss = loss.item()\n",
+    "    batch_accuracy = accuracy.item()\n",
+    "\n",
+    "    # Updata model\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    scheduler.step()\n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
+    "    # Log\n",
+    "    pbar.update()\n",
+    "    pbar.set_postfix(\n",
+    "      loss=f\"{batch_loss:.2f}\",\n",
+    "      accuracy=f\"{batch_accuracy:.2f}\",\n",
+    "      step=step + 1,\n",
+    "    )\n",
+    "\n",
+    "    # Do validation\n",
+    "    if (step + 1) % valid_steps == 0:\n",
+    "      pbar.close()\n",
+    "\n",
+    "      valid_accuracy = valid(valid_loader, model, criterion, device)\n",
+    "\n",
+    "      # keep the best model\n",
+    "      if valid_accuracy > best_accuracy:\n",
+    "        best_accuracy = valid_accuracy\n",
+    "        best_state_dict = model.state_dict()\n",
+    "\n",
+    "      pbar = tqdm(total=valid_steps, ncols=0, desc=\"Train\", unit=\" step\")\n",
+    "\n",
+    "    # Save the best model so far.\n",
+    "    if (step + 1) % save_steps == 0 and best_state_dict is not None:\n",
+    "      torch.save(best_state_dict, save_path)\n",
+    "      pbar.write(f\"Step {step + 1}, best model saved. (accuracy={best_accuracy:.4f})\")\n",
+    "\n",
+    "  pbar.close()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "  main(**parse_args())"
    ]
   },
   {
